# purescript-bridge

./: .gitignore  .hlint.yaml  Makefile  README.md  cabal.project  flake.lock.backup  flake.nix  hie.yaml  purescript-bridge.cabal  result
.github/workflows/: CI.yml  CI.yml.old
Sample/Plutus/V1/Ledger/: Ada.purs  Address.purs  Bytes.purs  Contexts.purs  Crypto.purs  Interval.purs  Time.purs  Tx.purs  TxId.purs  Value.purs
app/: Main.hs
nix/: README.md  code-quality.nix  haskell.nix  haskell_.nix  purescript-bridge-typelib.nix  purescript-bridge.nix  purescript-flake.nix  purescript-lib.nix
nix/purescript-bridge-nix-spago/: Makefile  node-packages.nix  package.json  packages.dhall  spago-packages.nix  spago.dhall
nix/purescript-bridge-nix-spago/src/: Main.purs
nix/purescript-bridge-nix-spago/test/: Main.purs
nix/purescript-bridge-typelib-spago/: Makefile  package-lock.json  packages.dhall  spago-packages.nix  spago.dhall
nix/purescript-bridge-typelib-spago/.spago2nix/: aff@v6.0.0.json  argonaut-traversals@v9.0.0.json  argonaut@v8.0.0.json  avar@v4.0.0.json  cardano-transaction-lib@06773f0bce72ba415f258f4bb66651101646261f.json  catenable-lists@v6.0.1.json  foreign-object@v3.0.0.json  fork@v5.0.0.json  form-urlencoded@v6.0.2.json  free@v6.1.0.json  lattice@v0.3.0.json  lcg@v3.0.0.json  literals@v0.2.0.json  medea@8b215851959aa8bbf33e6708df6bd683c89d1a5a.json  monad-logger@v1.3.1.json  node-fs-aff@v7.0.0.json  node-fs@v6.1.0.json  node-streams@v5.0.0.json  nonempty@v6.1.0.json  ordered-collections@v2.0.2.json  parsing@v7.0.1.json  random@v5.0.0.json  record@v3.0.0.json  safely@v4.0.1.json  typelevel-prelude@v6.0.0.json  uint@v6.0.3.json  undefined@v1.0.2.json  unicode@v5.0.0.json  unordered-collections@v2.1.4.json  untagged-union@v0.3.0.json  web-html@v3.2.0.json
nix/purescript-bridge-typelib-spago/.spago2nix-backup/: aff-promise@v3.0.0.json  affjax@v12.0.0.json  ansi@v6.1.0.json  argonaut-codecs@v8.1.0.json  argonaut-core@v6.0.0.json  arraybuffer-types@v3.0.1.json  assert@v5.0.0.json  bigints@v6.0.0.json  encoding@v0.0.7.json  freet@v6.0.0.json  http-methods@v5.0.0.json  js-uri@v2.0.0.json  mmorph@v6.0.0.json  mote@v1.1.0.json  naturals@v3.0.0.json  node-buffer@v7.0.1.json  node-path@v4.0.0.json  parallel@v5.0.0.json  pipes@v7.0.1.json  profunctor-lenses@v7.0.1.json  properties@v0.2.0.json  purescript-bridge-json-helpers@60615c36abaee16d8dbe09cdd0e772e6d523d024.json  quickcheck-combinators@v0.1.3.json  quickcheck-laws@v6.0.1.json  quickcheck@v7.1.0.json  rationals@v5.0.0.json  spec-quickcheck@v4.0.0.json  spec@v5.0.1.json  these@v5.0.0.json  typelevel@v6.0.0.json  web-xhr@v4.1.0.json
nix/purescript-bridge-typelib-spago/output/: cache-db.json
nix/purescript-bridge-typelib-spago/output/Address/: externs.cbor  index.js
nix/purescript-bridge-typelib-spago/output/Aeson/: externs.cbor  index.js
nix/purescript-bridge-typelib-spago/output/BalanceTx/: externs.cbor  index.js
nix/purescript-bridge-typelib-spago/output/Contract.Address/: externs.cbor  index.js
nix/purescript-bridge-typelib-spago/output/Contract.Aeson/: externs.cbor  index.js
nix/purescript-bridge-typelib-spago/output/Contract.Monad/: externs.cbor  index.js
nix/purescript-bridge-typelib-spago/output/Contract.Numeric.Convert/: externs.cbor
nix/purescript-bridge-typelib-spago/output/Contract.Numeric.NatRatio/: externs.cbor
nix/purescript-bridge-typelib-spago/output/Contract.Numeric.Natural/: externs.cbor  index.js
nix/purescript-bridge-typelib-spago/output/Contract.Numeric.Rational/: externs.cbor  index.js
nix/purescript-bridge-typelib-spago/output/Contract.PlutusData/: externs.cbor  index.js
nix/purescript-bridge-typelib-spago/output/Contract.Prelude/: externs.cbor  index.js
nix/purescript-bridge-typelib-spago/output/Contract.Prim.Any/: externs.cbor
nix/purescript-bridge-typelib-spago/output/Contract.Prim.ByteArray/: externs.cbor
nix/purescript-bridge-typelib-spago/output/Contract.ProtocolParameters.Alonzo/: externs.cbor  index.js
nix/purescript-bridge-typelib-spago/output/Contract.ScriptLookups/: externs.cbor  index.js
nix/purescript-bridge-typelib-spago/output/Contract.Scripts/: externs.cbor  index.js
nix/purescript-bridge-typelib-spago/output/Contract.Time/: externs.cbor  index.js
nix/purescript-bridge-typelib-spago/output/Contract.Transaction/: externs.cbor  index.js
nix/purescript-bridge-typelib-spago/output/Contract.TxConstraints/: externs.cbor  index.js
nix/purescript-bridge-typelib-spago/output/Contract.Utxos/: externs.cbor  index.js
nix/purescript-bridge-typelib-spago/output/Contract.Value/: externs.cbor  index.js
nix/purescript-bridge-typelib-spago/output/Contract.Wallet/: externs.cbor  index.js
nix/purescript-bridge-typelib-spago/output/Data.Argonaut.Aeson/: externs.cbor
nix/purescript-bridge-typelib-spago/output/Data.Argonaut.Decode.Aeson/: externs.cbor  index.js
nix/purescript-bridge-typelib-spago/output/Data.Argonaut.Encode.Aeson/: externs.cbor  index.js
nix/purescript-bridge-typelib-spago/output/Deserialization.BigInt/: externs.cbor
nix/scripts/: check-formatting.sh  format.sh  lint-inplace.sh  lint.sh
plutus-ledger-api-typelib/PlutusTx/: AssocMap.purs
roundtrip/RoundTrip/: ArbitraryLedger.hs  Main.hs  Spec.hs  Types.hs
roundtrip/RoundTripPurs/: node-packages.nix  package-lock.json  spago-packages.nix
roundtrip/RoundTripPurs/src/: Main.purs
src/: PlutusBridge.hs  cabal.project
src/Language/PureScript/: Bridge.hs
src/PlutusTx/: #%2Amerge%2A#ZJUKBz#  Aux.hs  ConstrIndices.hs  LedgerTypes.hs
test/: ArbitraryLedger.hs  Spec.hs  TestData.hs
test/RoundTrip/: Spec.hs  TH.hs  Types.hs
test/RoundTrip/app/: Makefile  node-packages.nix  package-lock.json  package.json  packages.dhall  spago-packages.nix  spago.dhall
test/RoundTripPurs/: Makefile  spago-packages.nix  spago.dhall
test/expected/plutus-codegen/: RecordWithPlutus.purs  RecordWithPlutusScripts.purs  TwoRecords.purs  TwoRecordsWithDataAndJson.purs
~/Data/: Tuple.purs
~/Serialization/: Address.purs
~/Types/: ByteArray.purs  Interval.purs  Value.purs
(+178 files in other folders)
