cabal-version:      2.4
name:               purescript-bridge

-- The package version.  See the Haskell package versioning policy (PVP)
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:            0.14.0.0

-- A short (one-line) description of the package.
synopsis:           Generate PureScript data types from Haskell data types

-- A longer description of the package.
-- description:

-- The license under which the package is released.
license:            BSD-3-Clause

-- The file containing the license text.
license-file:       LICENSE

-- The package author(s).
author:             Robert Klotzner

-- An email address to which users can send suggestions, bug reports, and
-- patches.
maintainer:         robert . klotzner A T gmx . at

-- A copyright notice.
-- copyright:

category:           Web
build-type:         Simple

-- Extra files to be distributed with the package, such as examples or a
-- README.
-- extra-source-files:

extra-source-files: README.md

common common-lang
  ghc-options:
    -Wall -Wcompat -Wincomplete-uni-patterns -Wno-unused-do-bind
    -Wno-partial-type-signatures -Wmissing-export-lists
    -Wincomplete-record-updates -Wmissing-deriving-strategies
    -Wno-name-shadowing -Wunused-foralls -fprint-explicit-foralls
    -fprint-explicit-kinds -fwarn-missing-import-lists -Werror

  build-depends:      base
  default-extensions:
    NoStarIsType
    BangPatterns
    BinaryLiterals
    ConstrainedClassMethods
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DoAndIfThenElse
    EmptyCase
    EmptyDataDecls
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    ForeignFunctionInterface
    GADTSyntax
    GeneralisedNewtypeDeriving
    HexFloatLiterals
    ImplicitPrelude
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MonomorphismRestriction
    MultiParamTypeClasses
    NamedFieldPuns
    NamedWildCards
    NumericUnderscores
    OverloadedStrings
    PartialTypeSignatures
    PatternGuards
    PolyKinds
    PostfixOperators
    RankNTypes
    RelaxedPolyRec
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    TypeSynonymInstances
    ViewPatterns

  default-language:   Haskell2010

library
  import:           common-lang
  exposed-modules:
    Language.PureScript.Bridge
    Language.PureScript.Bridge.Builder
    Language.PureScript.Bridge.CodeGenSwitches
    Language.PureScript.Bridge.Primitives
    Language.PureScript.Bridge.Printer
    Language.PureScript.Bridge.PSTypes
    Language.PureScript.Bridge.SumType
    Language.PureScript.Bridge.Tuple
    Language.PureScript.Bridge.TypeInfo
    Language.PureScript.Bridge.TypeParameters
    PlutusTx.Aux
    PlutusTx.ConstrIndices
    PlutusTx.LedgerTypes

  build-depends:
    , base               >=4.8 && <6.0
    , containers
    , directory
    , filepath
    , generic-deriving
    , lens
    , mtl
    , plutus-ledger-api
    , plutus-tx
    , template-haskell
    , text
    , th-abstraction
    , transformers
    , wl-pprint-text

  ghc-options:      -Wall -fwarn-incomplete-patterns -Werror
  hs-source-dirs:   src
  default-language: Haskell2010

test-suite tests
  import:           common-lang
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  other-modules:
    RoundTrip.Spec
    RoundTrip.Types
    TestData

  build-depends:
    , aeson
    , base
    , bytestring
    , containers
    , directory
    , hspec
    , hspec-expectations
    , HUnit
    , process
    , purescript-bridge
    , QuickCheck
    , text
    , utf8-string
    , wl-pprint-text

  hs-source-dirs:   test
  default-language: Haskell2010

executable cli
  import:         common-lang
  build-depends:
    , base
    , directory
    , filepath
    , optparse-applicative
    , purescript-bridge

  scope:          public
  hs-source-dirs: app
  main-is:        Main.hs
  ghc-options:    -Wno-missing-home-modules
