cabal-version:      3.0
name:               purescript-bridge
version:            0.14.0.0
synopsis:           Generate PureScript data types from Haskell data types
license:            BSD-3-Clause
license-file:       LICENSE
author:             Robert Klotzner
maintainer:         robert . klotzner A T gmx . at
category:           Web
build-type:         Simple
extra-source-files: README.md

source-repository head
  type:     git
  location: https://github.com/mlabs-haskell/purescript-bridge

common common-lang
  ghc-options:
    -Wall -Wcompat -Wincomplete-uni-patterns -Wno-unused-do-bind
    -Wno-partial-type-signatures -Wmissing-export-lists
    -Wincomplete-record-updates -Wmissing-deriving-strategies
    -Wno-name-shadowing -Wunused-foralls -fprint-explicit-foralls
    -fprint-explicit-kinds -fwarn-missing-import-lists -threaded
    -Werror

  build-depends:      base
  default-extensions:
    NoStarIsType
    BangPatterns
    BinaryLiterals
    ConstrainedClassMethods
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DoAndIfThenElse
    EmptyCase
    EmptyDataDecls
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    ForeignFunctionInterface
    GADTSyntax
    GeneralisedNewtypeDeriving
    HexFloatLiterals
    ImplicitPrelude
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MonomorphismRestriction
    MultiParamTypeClasses
    NamedFieldPuns
    NamedWildCards
    NumericUnderscores
    OverloadedStrings
    PartialTypeSignatures
    PatternGuards
    PolyKinds
    PostfixOperators
    RankNTypes
    RelaxedPolyRec
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    TypeSynonymInstances
    ViewPatterns

  default-language:   Haskell2010

library
  import:           common-lang
  exposed-modules:
    Language.PureScript.Bridge
    Language.PureScript.Bridge.Builder
    Language.PureScript.Bridge.CodeGenSwitches
    Language.PureScript.Bridge.Commands
    Language.PureScript.Bridge.Primitives
    Language.PureScript.Bridge.Printer
    Language.PureScript.Bridge.PSTypes
    Language.PureScript.Bridge.SumType
    Language.PureScript.Bridge.Tuple
    Language.PureScript.Bridge.TypeInfo
    Language.PureScript.Bridge.TypeParameters
    PlutusTx.Aux
    PlutusTx.ConstrIndices
    PlutusTx.LedgerTypes

  build-depends:
    , base                  >=4.8 && <6.0
    , containers
    , directory
    , filepath
    , generic-deriving
    , lens
    , mtl
    , optparse-applicative
    , plutus-ledger-api
    , plutus-tx
    , template-haskell
    , text
    , th-abstraction
    , transformers
    , wl-pprint-text

  ghc-options:
    -ddump-minimal-imports -Wall -fwarn-incomplete-patterns -Werror

  hs-source-dirs:   src
  default-language: Haskell2010

test-suite tests
  import:           common-lang
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  other-modules:
    ArbitraryLedger
    RoundTrip.Spec
    RoundTrip.Types
    TestData

  build-depends:
    , aeson
    , base
    , base16-bytestring
    , bytestring
    , call-stack
    , containers
    , deepseq
    , directory
    , generics-sop
    , hspec
    , hspec-core
    , hspec-expectations
    , HUnit
    , plutus-core
    , plutus-ledger-api
    , plutus-tx
    , pretty-simple
    , process
    , purescript-bridge
    , QuickCheck
    , quickcheck-plutus-instances
    , serialise
    , text
    , utf8-string
    , wl-pprint-text

  hs-source-dirs:   test
  default-language: Haskell2010
  ghc-options:      -ddump-minimal-imports

executable cli
  import:         common-lang
  build-depends:
    , base
    , directory
    , filepath
    , optparse-applicative
    , purescript-bridge

  scope:          public
  hs-source-dirs: app
  main-is:        Main.hs
  ghc-options:    -ddump-minimal-imports -Wno-missing-home-modules
